<resources>
    <string name="app_name">OneDataShare</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_with">Login with</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="already_onboard">Already onboard?</string>
    <string name="need_an_account">Need an account ?</string>
    <string name="sign_up">Sign up</string>
</resources>
